# leitmedien

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  LICENSE  MANIFEST.in  Makefile  README.md  Vagrantfile  mkdocs.yml  setup.cfg  setup.py
.github/: rename_project.sh
leitmedien/: __main__.py  base.py  cli.py
src/basicpy/: database.py  structure.py
src/leitmedien/: article.py  database.py  items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py  zeitspider.py
tests/: test_base.py  test_database.py
